# thingy91_mqtt_gnss

./: CMakeLists.txt  Kconfig  NemeusProject-CA.crt  README.md  certificatCA.der  certificatTH91.der  certificatTH91PK.der  crt_card_Thingy91_1.crt  crt_card_Thingy91_1.key  mqtt_connection.c  mqtt_connection.h  prj.conf
boards/: thingy91_nrf9160_ns.conf
src/: bme680.c  bme680.h  main.c
src/datatypes/: datatypes.c  datatypes.h
src/gnss/: gnss.c  gnss.h
src/mqtt/: mqtt_connection.c
src/pmic/: pmic.c  pmic.h
src/sensors/: bme680.c  bme680.h
